welcome.lessons.welcome.methods.picture.MethodsPicture.scala.error
MethodsPicture:30: error: not found: value color
  faireV(color.YELLOW)
         ^MethodsPicture:31: error: not found: value color
  faireV(color.RED)
         ^MethodsPicture:32: error: not found: value color
  faireV(color.BLUE)
         ^MethodsPicture:33: error: not found: value color
  faireV(color.GREEN)
         ^